# no-parachute-unity

./: .gitignore  .luacheckrc  Assets.lua  Blood.lua  Camera.lua  FramerateCounter.lua  GameScreen.lua  InputManager.lua  LevelLogic.lua  MovingPlane.lua  NoParachute.gproj  Plane.lua  PlaneMesh.lua  Player.lua  PowerUp.lua  README.md  SavesManager.lua  ScreenManager.lua  SettingsManager.lua  TexturePNG.lua  World.lua  main.lua  math.lua  png.lua  stream.lua  utils.lua
Assets/: WSATestCertificate.pfx
Assets/editor/: LevelEditor.cs  PostBuild.cs
Assets/materials/: blood-particle.mat  enemy_body.mat  hit_particle.mat  hole_mask.mat
Assets/models/: plane_frame.fbx
Assets/plugins/: SimpleJSON.cs
Assets/prefabs/: FPS Counter Text.prefab  decorative_plane.prefab  dummy_plane.prefab  limb_blood.prefab  pipe_wall.prefab  plane.prefab  player.prefab  power_up.prefab  wall.prefab
Assets/resources/: DummyPlane.prefab
Assets/scenes/: CreditsMenu.unity  Game.unity  LevelsMenu.unity  MainMenu.unity  SettingsMenu.unity  SkinsMenu.unity
Assets/scripts/: EnemyController.cs  GameMain.cs  GameUI.cs  JoystickInput.cs  Utils.cs  (+4 more)
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  UnityConnectSettings.asset
assets/: logo.pdn  plane3.png.msk
icon/: googleplay_banner.pdn  icon.pdn
lib/: png.lua  sha1.lua
screens/: AboutScreen.lua  GameScreen.lua  LevelSelectScreen.lua  MainMenuScreen.lua  Screen.lua  ScreenManager.lua  SettingsMenuScreen.lua
ui/: TextFieldShadow.lua
utils/pngToMask/: CMakeLists.txt  main.cpp
(+248 files in other folders)
